kubernetes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: go-kubernetes
  labels:
    name: go-kubernetes
    module: Namespace

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-server
  namespace: go-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: go-server
          image: sing3demons/go-kubernetes:0.1
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 4
            failureThreshold: 4
          livenessProbe:
            exec:
              command:
                - cat
                - /tmp/live
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 5
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: go-kubernetes
spec:
  selector:
    app: server
  ports:
  - port: 8080
    targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
      kubernetes.io/ingress.class: nginx
  namespace: go-kubernetes
  labels:
    name: my-ingress
spec:
  rules:
  - host: kp.sing3demons
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: server
            port: 
              number: 8080
